test/libyul/yulSyntaxTests/objects/empty_object_name.yul
object "" {
}
// ----
// ParserError 3287: (7-9): Object name cannot be empty.
// ParserError 2314: (12-13): Expected 'code' but got '}'
